Final features (#10)
* beta 1

* beta 2 & 3

* beta 4, 5 & 6

* beta 7 & 8

* beta 9

* Soft-delete employees with recorded shifts

Add a new `Shift.countByEmployee` named query and use it in `EmployeeService.deleteEmployee`. When an employee has associated shift records, the service now marks the employee as inactive (`active = "F"`) instead of deleting the row, and returns a message explaining the inactivation.

---------

Co-authored-by: Gabriel Vindas <gabriel.vindas.maroto@est.una.ac.cr>